--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="col-lg-12">
                         <div class="text-container">
                             <h1>DEVI WAHYUNI SILITONGA</h1>
-                            <p class="p-heading p-large">I am an undergraduate Informatics Student at Del Institute of Technology. During college, I am active in several organizations and while working part time as a UI/UX Designer at Sotardok.</p>
+                            <p class="p-heading p-large">I am an undergraduate Informatics Student at Del Institute of Technology. During college, I am active in several organizations and working part time as a UI/UX Designer at Sotardok.</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
                         </div>
                     </div> <!-- end of col -->
@@ -110,7 +110,7 @@
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
                         <h2>Hello all, welcome!</h2>
-                        <p>I'm Devi, and I'm 6th semester student of Bachelor of Informatics study program from Del Institute of Technology. Now, I wanna tell you a little about my self.
+                        <p>I'm Devi, and I'm 6th semester student of Bachelor of Informatics study program from Del Institute of Technology. Now, let me tell you more about myself.
                             <ul class="admin-profile">
                                 <li><span class="pro-title"> Name: </span> <span class="pro-detail">Devi Wahyuni Silitonga</span></li>
                                 <li><span class="pro-title"> Birth Date: </span> <span class="pro-detail">1st March 2000</span></li>
