--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             </li>
                             <li>
                                 <div class="content-text">
-                                    <h6 class="">Del institute of technology - Bachelor of Informatics Engineering</h6>
+                                    <h6 class="">Del Institute of Technology - Informatics</h6>
                                     <h7>GPA: 3,43</h7>
                                     <span>2018 - present</span>
     <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
@@ -180,7 +180,7 @@
                             </li>
                             <li>
                                 <div class="content-text">
-                                    <h6 class="">Freelance - Sotardok</h6>
+                                    <h6 class="">Freelance - Sotardok(Sotardok is a Software House)</h6>
                                     <h7>UI/UX Designer</h7>
                                     <span>June 2020 - present</span>
     <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
@@ -217,7 +217,7 @@
                             <li>
                                 <div class="content-text">
                                     <h6 class="">Matriculation Assitant</h6>
-                                    <h7>Assistant of Informatic</h7>
+                                    <h7>Assistant of Informatics</h7>
                                     <span>Aug 2019 - Sept 2019</span>
     <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
     <!--                                    distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>-->
