--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
                         <h2>Hello all, welcome!</h2>
-                        <p>I'm Devi, and I'm 6th semester student of Bachelor of Informatics study program from Del Institute of Technology. Now, let me tell you more about myself.
+                        <p>I'm Devi, and I'm 6th semester student of Informatics study program from Del Institute of Technology. Now, let me tell you more about myself.
                             <ul class="admin-profile">
                                 <li><span class="pro-title"> Name: </span> <span class="pro-detail">Devi Wahyuni Silitonga</span></li>
                                 <li><span class="pro-title"> Birth Date: </span> <span class="pro-detail">1st March 2000</span></li>
