--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="col-lg-12">
                         <div class="text-container">
                             <h1>DEVI WAHYUNI SILITONGA</h1>
-                            <p class="p-heading p-large">I am an undergraduate Informatics Student at Del Institute of Technology. During college, I am active in several organizations and working part time as a UI/UX Designer at Sotardok.</p>
+                            <p class="p-heading p-large">I am an undergraduate Informatics Student at Del Institute of Technology. During college, I am active in several organizations and working part time as a UI/UX Designer at Software House, Sotardok.</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
                         </div>
                     </div> <!-- end of col -->
@@ -180,7 +180,7 @@
                             </li>
                             <li>
                                 <div class="content-text">
-                                    <h6 class="">Freelance - Sotardok(Sotardok is a Software House)</h6>
+                                    <h6 class="">Freelance - Software House, Sotardok</h6>
                                     <h7>UI/UX Designer</h7>
                                     <span>June 2020 - present</span>
     <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
