--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 <div class="content-text">
                                     <h6 class="">KPU IT Del 2020</h6>
                                     <h7>Division of documentation</h7>
-                                    <span>March 2020</span>
+                                    <span>March 2020 - April 2020</span>
     <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
     <!--                                    distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>-->
                                 </div>
