--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <li>
                                 <div class="content-text">
                                     <h6 class="">Del Institute of Technology - Informatics</h6>
-                                    <h7>GPA: 3,43</h7>
+                                    <h7>GPA: 3,44</h7>
                                     <span>2018 - present</span>
     <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
     <!--                                    distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>-->
@@ -169,20 +169,29 @@
                                 <i class="fas fa-list-alt"></i>
                                 <h2 class="timelin-title">Experience</h2>
                             </li>
-                            <li>
+			    <li>
+                                <div class="content-text">
+                                    <h6 class="">Freelance - Software House, Sotardok</h6>
+                                    <h7>UI/UX Designer</h7>
+                                    <span>June 2020 - present</span>
+    <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
+    <!--                                    distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>-->
+                                </div>
+                            </li>
+			    <li>
                                 <div class="content-text">
                                     <h6 class="">Internship - Bureau of Communication – The Coordinating Ministry for Maritime Affairs and Investment</h6>
                                     <h7>UI/UX Designer</h7>
-                                    <span>Sept 2020 - Nov 2020</span>
+                                    <span>May 2021 - Aug 2021</span>
     <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
     <!--                                    distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>-->
                                 </div>
                             </li>
                             <li>
                                 <div class="content-text">
-                                    <h6 class="">Freelance - Software House, Sotardok</h6>
+                                    <h6 class="">Internship - Bureau of Communication – The Coordinating Ministry for Maritime Affairs and Investment</h6>
                                     <h7>UI/UX Designer</h7>
-                                    <span>June 2020 - present</span>
+                                    <span>Sept 2020 - Nov 2020</span>
     <!--                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so-->
     <!--                                    distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>-->
                                 </div>
