--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="col-lg-12">
                         <div class="text-container">
                             <h1>DEVI WAHYUNI SILITONGA</h1>
-                            <p class="p-heading p-large">I am an undergraduate Informatics Student at Del Institute of Technology. During college, I am active in several organizations and working part time as a UI/UX Designer at Software House, Sotardok.</p>
+                            <p class="p-heading p-large">I am Devi, a UI/UX Designer with 2 years working experience. I am an 8th semester Informatics student at Del Institute of Technology. I have worked part-time at the Bureau of Communication – The Coordinating Ministry for Maritime Affairs and Investment and also a freelance at a Software House called Sotardok as a UI/UX Designer. With a good time management, flexibility, and creativity, I am able to complete my work on time and on target.</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
                         </div>
                     </div> <!-- end of col -->
@@ -110,7 +110,7 @@
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
                         <h2>Hello all, welcome!</h2>
-                        <p>I'm Devi, and I'm 6th semester student of Informatics study program from Del Institute of Technology. Now, let me tell you more about myself.
+                        <p>I'm Devi, and I'm 8th semester student of Informatics study program from Del Institute of Technology. Now, let me tell you more about myself.
                             <ul class="admin-profile">
                                 <li><span class="pro-title"> Name: </span> <span class="pro-detail">Devi Wahyuni Silitonga</span></li>
                                 <li><span class="pro-title"> Birth Date: </span> <span class="pro-detail">1st March 2000</span></li>
@@ -118,7 +118,6 @@
                                 <li><span class="pro-title"> Address:</span> <span class="pro-detail">Porsea, Toba, North Sumatera, Indonesia</span></li>
                                 <li><span class="pro-title"> e-mail :</span> <span class="pro-detail">silitongadevi3@gmail.com</span></li>
                                 <li><span class="pro-title"> Phone/WA :</span> <span class="pro-detail">+(62) 822 7383 1003</span></li>
-                                <li><span class="pro-title"> Freelance :</span> <span class="pro-detail">Available</span></li>
                             </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
