--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Hello, All. I'm Devi, I am an undergraduate Informatics Student at Del Institute of Technology. This is my portfolio. Please enjoy it. Thank you!">
+    <meta name="description" content="I am Devi, a UI/UX Designer with 2 years working experience. I am an 8th semester Informatics student at Del Institute of Technology. This is my portfolio. Please enjoy it. Thank you!">
     <meta name="author" content="Inovatik">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
